# the-bouncer

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
docs/: scenarios.md
src/api/: endpoints.py  exceptions.py  mappers.py  schemas.py
src/bootstrap/: app.py  configuration.py  containers.py  run_service.py
src/modules/: commons.py
src/modules/admission/: __init__.py  dto.py  use_case.py
src/modules/analytics/application/: ports.py
src/modules/analytics/application/use_cases/: execute_analytics.py
src/modules/analytics/infrastructure/: analytics_adapter.py
src/modules/bouncer/application/use_cases/: process_request.py
src/modules/budget_manager/: __init__.py  dto.py  interface.py  service.py
src/modules/budget_manager/application/: ports.py
src/modules/budget_manager/application/use_cases/: execute_budget_manager.py
src/modules/budget_manager/infrastructure/: budget_manager_adapter.py
src/modules/cost_engine/application/: ports.py
src/modules/cost_engine/application/use_cases/: execute_cost_engine.py
src/modules/cost_engine/infrastructure/: cost_engine_adapter.py
src/modules/policy/: __init__.py  domain.py  dto.py  exceptions.py  interface.py  service.py
src/modules/request_validator/application/: ports.py
src/modules/request_validator/application/use_cases/: validate_request.py
src/modules/request_validator/domain/: __init__.py
src/modules/request_validator/infrastructure/: request_validator_adapter.py
src/modules/validation/: __init__.py  exceptions.py  interface.py  service.py
tests/: commons.py  e2e.py  test_concurrent_overspend.py  utils.py
tests/unit/: test_budget_manager.py  test_policy.py
