[project]
name = "the-bouncer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.4",
]


[tool.ruff]
target-version = "py313" 
line-length = 110
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common design flaws)
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade (modern Python syntax)
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["budget_management", "cost_engine", "analytics", "request_validation"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
